#place here all libraries

#SQLite
IF(USE_SQLITE_DATABASE)
	add_subdirectory(SQLite)
	set(SQLITE_INCLUDE_DIRECTORY ${SQLITE_INCLUDE_DIRECTORY} PARENT_SCOPE)
ENDIF()

#Libusbpp
add_subdirectory(Libusbpp)
set(LIBUSBPP_FOUND ${LIBUSBPP_FOUND} PARENT_SCOPE)
set(LIBUSBPP_INCLUDE_DIRS ${LIBUSBPP_INCLUDE_DIRS} PARENT_SCOPE)
set(LIBUSBPP_LIBRARIES ${LIBUSBPP_LIBRARIES} PARENT_SCOPE)

#curl
add_subdirectory(curl)
set(CURL_INCLUDE_DIRECTORY ${CURL_SOURCE_DIR}/include PARENT_SCOPE)

#curlpp
add_subdirectory(curlpp)
set(CURLPP_INCLUDE_DIRECTORIES ${CURLPP_INCLUDE_DIRECTORIES} PARENT_SCOPE)

